WebContent process repeatedly jetsams on BuzzFeed's Another Round page https://bugs.webkit.org/show_bug.cgi?id=167830 <rdar://problem/30187368>

Reviewed by Simon Fraser.

Source/WebCore:

The jetsams on https://www.buzzfeed.com/anotherround were caused by WebKit creating the backing store
for every iframe's layer on the page regardless of whether they're in the viewport or not.

This was caused by GraphicsLayerCA's setVisibleAndCoverageRects not setting CoverageRectChanged on
m_uncommittedChanges on the very first call. Fixed the bug by initializing m_uncommittedChanges
to always have CoverageRectChanged so that the coverage rect would get updated properly.

Unfortunately, no new tests since somehow the backing store doesn't get created inside the test runner.

* platform/graphics/ca/GraphicsLayerCA.h:
(WebCore::GraphicsLayerCA):

LayoutTests:

Rebaseline the test now that some overlay repaints are avoided properly by updating the overlay coverage rects.

* platform/ios-simulator-wk2/pageoverlay/overlay-remove-reinsert-view-expected.txt:


Canonical link: https://commits.webkit.org/184994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211845 268f45cc-cd09-0410-ab3c-d52691b4dbfc